@@ -45,15 +45,7 @@ android {
 
 
     }
-
-    productFlavors {
-        dev {
-            minSdkVersion 21
-        }
-        prod {
-            minSdkVersion 15
-        }
-    }
+    
     buildTypes {
         debug {
             signingConfig signingConfigs.debug
@@ -82,6 +74,12 @@ android {
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs '-XX:MaxPermSize=512m'
+        }
     }
 }
 
